<resources>
    <string name="app_name">ProjetoIPO</string>
    <string name="menu_home">Home</string>
    <string name="cad_usuario">Cadastro de usuários</string>
    <string name="cad_viaturas">Cadastro de Viaturas</string>
    <string name="titulo_app">INFORME PADRÃO DE OCORRÊNCIAS</string>

    <string name="btn_editar">Editar</string>
    <string name="btn_preencher">Preencher formulário</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_adicionar">adicionar</string>
    <string name="btn_excluir">Excluir</string>
    <string name="btn_pdf">Gerar PDF</string>
    <string name="btn_proximo">Próximo</string>
    <string name="btn_cadastrar">Cadastrar</string>

    <string name="label_data">Data:</string>
    <string name="label_horas">Horas:</string>
    <string name="label_natureza">Natureza:</string>
    <string name="label_SubNatureza">Sub natureza:</string>
    <string name="del_usuario">Excluir Usuário</string>
    <string name="label_nome">Nome:</string>
    <string name="label_graduacao">Graduação:</string>
    <string name="label_crbm">CRBM:</string>
    <string name="label_obm">OBM:</string>
    <string name="label_cidade">Cidade:</string>
    <string name="label_logradouro">Logradouro:</string>
    <string name="label_bairro">Bairro:</string>
    <string name="label_cbAcionado">CB/PBC: Acionado</string>
    <string name="label_CbAcionado">CB Acionado:</string>
    <string name="label_complemento">Complemento:</string>
    <string name="label_abtr">ABTR:</string>
    <string name="label_aa">AA:</string>
    <string name="label_abs">ABS:</string>
    <string name="label_abt">ABT:</string>
    <string name="label_vtrComplementar">Viatura complementar:</string>
    <string name="label_selecaoVtr">Selecione a viatura abaixo ou clique e segure no ícone da lixeira para excluí-la.</string>
    <string name="label_selectVtr">Selecione as viaturas empenhadas:</string>
    <string name="label_efetivoEmpenhado">Número de BMs empenhados:</string>
    <string name="label_tipologia">Tipo:</string>
    <string name="label_sim">Sim</string>
    <string name="label_nao">Não</string>
    <string name="label_apoio">Apoio</string>

    <string name="msg_select">Caso seu nome não esteja na lista abaixo, clique no menu acima e crie um cadastro.</string>
    <string name="msg_exluir">Clique e segure para excluir um usuário</string>
    <string name="msg_deletar">Deseja excluir este usuário?</string>
    <string name="msg_deletarViatura">Deseja excluir esta viatura?</string>
    <string name="msg_cabecalho_inclusao">Preencha os campos para adicionar um perfil</string>
    <string name="msg_resumo"><u>Resumo</u></string>
    <string name="msg_iformacoesInicio"><u>Informações Iniciais</u></string>
    <string name="msg_recursos"><u>Recursos utilizados</u></string>
    <string name="msg_endereco"><u>Local do Evento</u></string>
    <string name="msg_cadastrar">Caso a viatura não esteja na lista a cima, preencha os campos tipo e numeração para cadastrá-la.</string>
    <string name="msg_apoio"><u>Órgãos de Apoio</u></string>
    <string name="msg_contexto"><u>Contextualização</u></string>
    <string name="msg_adicionarApoio">Deseja adicionar um orgão de apoio?</string>
    <string name="msg_vitimas"><u>Danos à pessoas</u></string>

    <string name="calendar_description">Botão de calendário</string>
    <string name="time_picker_description">Botão de relógio</string>
    <string name="autoComplete_description">Campo de auto complete de nome</string>

    <string name="crbm1">1º COMANDO REGIONAL DE BOMBEIRO MILITAR - CURITIBA</string>
    <string name="crbm2">2º COMANDO REGIONAL DE BOMBEIRO MILITAR - LONDRINA</string>
    <string name="crbm3">3º COMANDO REGIONAL DE BOMBEIRO MILITAR - CASCAVEL</string>
    <string name="cadastro">Cadastro</string>
    <string name="vtrs_empenhadas">Viaturas empenhadas:</string>
    <string name="n_bms">nº de BMs:</string>
    <string name="totalVitimas">Total de vítimas:</string>
    <string name="cod1">Cód 1:</string>
    <string name="cod2">Cód 2:</string>
    <string name="cod3">Cód 3:</string>
    <string name="cod4">Cód 4:</string>
    <string name="vitIlesa">Vitimas Ilesas:</string>
    <string name="label_desdobramento">Desdobramento</string>
    <string name="label_cenario">Cenário</string>
    <string name="label_danosPropriedade">Danos a Propriedade</string>
    <string name="label_danosAmbiente">Danos ao Meio Ambiente</string>
    <string name="label_obsVitima">Observação da Vítima</string>
    <string name="label_foto">Capturar foto do local</string>
    <string name="label_aeronautica">Aeronáutica</string>
    <string name="label_bombeiroPrivado">Bombeiro Privado</string>
    <string name="label_ciaAgua">CIA de Água e Esgoto</string>
    <string name="label_BpmoaPmpr">BPMOA/PMPR</string>
    <string name="label_CiaEnergia">CIA de Energia Elétrica</string>
    <string name="label_CbOutroEstado">CB de Outro Estado</string>
    <string name="label_DefesaCivil">Defesa Civil (Casa Militar)</string>
    <string name="label_DefesaCivilCompdec">Defesa Civil (COMPDEC)</string>
    <string name="label_ConcessionariaRodovia">Concessionária da Rodovia</string>
    <string name="label_crea">CREA</string>
    <string name="label_DerDnit">DER/DNIT</string>
    <string name="label_exercito">Exército</string>
    <string name="label_FiscalizacaoMunicipal">Fiscalização de Trânsito Municipal</string>
    <string name="label_GuardaMunicipal">Guarda Municipal</string>
    <string name="label_GuardaPortuaria">Guarda Portuária</string>
    <string name="label_iap">IAP</string>
    <string name="label_ibama">IBAMA</string>
    <string name="label_iml">IML</string>
    <string name="label_instituicaoPrivada">Instituição Privada</string>
    <string name="label_InstituicaoPublica">Instituição Pública</string>
    <string name="label_marinha">Marinha</string>
    <string name="label_pmpr">PMPR</string>
    <string name="label_policiaCientifica">Polícia Científica Paraná</string>
    <string name="label_polIciaCivil">Polícia Civil</string>
    <string name="label_policiaFederal">Polícia Federal</string>
    <string name="label_policiaFlorestal">Polícia Florestal</string>
    <string name="label_policiaMilitarOutroEstado">Polícia Militar de Outro Estado</string>
    <string name="label_policiaRodoviariaFederal">Polícia Rodoviária Federal</string>
    <string name="label_receitaEstadual">Receita Estadual</string>
    <string name="label_vigilinciaSanitaria">Vigilância Sanitária Municipal</string>
    <string name="label_vigilinciaSanitariaEstadual">Vigilância Sanitária Estadual</string>
    <string name="label_policiaRodoviariaEstadual">Polícia Rodoviária Estadual</string>
    <string name="label_prefeituraMunicipal">Prefeitura Municipal</string>
    <string name="label_samu">SAMU</string>

</resources>