<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView1"
        style="@style/textView_geral"
        android:gravity="center"
        android:text="@string/msg_resumo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_gerar_pdf"
        app:layout_constraintTop_toBottomOf="@id/divider4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/txt_crbm"
                style="@style/textView1_resumo"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/txt_obm"
                style="@style/textView1_resumo"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/textView2_resumo"
                    android:text="@string/label_nome" />

                <TextView
                    android:id="@+id/txt_nome"
                    style="@style/textView2_resumo"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextView3"
                    style="@style/textView2_resumo"
                    android:text="@string/label_data" />

                <TextView
                    android:id="@+id/txt_data"
                    style="@style/textView2_resumo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextView4"
                    style="@style/textView2_resumo"
                    android:text="@string/label_horas" />

                <TextView
                    android:id="@+id/txt_hora"
                    style="@style/textView2_resumo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextView5"
                    style="@style/textView2_resumo"
                    android:text="@string/label_natureza" />

                <TextView
                    android:id="@+id/txt_natureza"
                    style="@style/textView2_resumo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    style="@style/textView2_resumo"
                    android:text="@string/label_SubNatureza" />

                <TextView
                    android:id="@+id/txt_subNatureza"
                    style="@style/textView2_resumo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    style="@style/textView2_resumo"
                    android:text="@string/label_cidade" />

                <TextView
                    android:id="@+id/txt_cidade"
                    style="@style/textView2_resumo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    style="@style/textView2_resumo"
                    android:text="@string/label_bairro" />

                <TextView
                    android:id="@+id/txt_bairro"
                    style="@style/textView2_resumo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    style="@style/textView2_resumo"
                    android:text="@string/label_logradouro" />

                <TextView
                    android:id="@+id/txt_logradouro"
                    style="@style/textView2_resumo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    style="@style/textView2_resumo"
                    android:text="@string/label_complemento" />

                <TextView
                    android:id="@+id/txt_complemento"
                    style="@style/textView2_resumo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    style="@style/textView2_resumo"
                    android:text="@string/label_CbAcionado" />

                <TextView
                    android:id="@+id/txt_cbAcionado"
                    style="@style/textView2_resumo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    style="@style/textView2_resumo"
                    android:text="@string/n_bms" />

                <TextView
                    android:id="@+id/num_bm"
                    style="@style/textView2_resumo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    style="@style/textView2_resumo"
                    android:text="@string/vtrs_empenhadas" />

                <TextView
                    android:id="@+id/vtrEmpenhadas"
                    style="@style/textView2_resumo" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView15"
                    style="@style/textView2_resumo"
                    android:text="@string/vitIlesa" />

                <TextView
                    android:id="@+id/txtIlesa"
                    style="@style/textView2_resumo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView16"
                    style="@style/textView2_resumo"
                    android:text="@string/cod1" />

                <TextView
                    android:id="@+id/txtCod1"
                    style="@style/textView2_resumo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    style="@style/textView2_resumo"
                    android:text="@string/cod2" />

                <TextView
                    android:id="@+id/txtCod2"
                    style="@style/textView2_resumo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView18"
                    style="@style/textView2_resumo"
                    android:text="@string/cod3" />

                <TextView
                    android:id="@+id/txtCod3"
                    style="@style/textView2_resumo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView19"
                    style="@style/textView2_resumo"
                    android:text="@string/cod4" />

                <TextView
                    android:id="@+id/txtCod4"
                    style="@style/textView2_resumo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView14"
                    style="@style/textView2_resumo"
                    android:text="@string/totalVitimas" />

                <TextView
                    android:id="@+id/totalVitimas"
                    style="@style/textView2_resumo" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtObsVitimas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/perfil_input"
                android:padding="8dp"
                android:textColor="@color/cor_fonte"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView20"
                style="@style/textView2_resumo"
                android:layout_marginTop="24dp"
                android:text="Danos ao Meio Ambiente" />

            <TextView
                android:id="@+id/txtMeioAmbiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/perfil_input"
                android:padding="8dp"
                android:textColor="@color/cor_fonte"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_gerar_pdf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/btn_pdf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
